# kanomnom-python-server

./: .dockerignore  .env.default  .gitconfig  .gitignore  AGENTS.md  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  fetch_weather_to_postgres_original.py  pyproject.toml
apps/api/: .env.default  README.md  fetch_weather_to_postgres.py  pyproject.toml
apps/api/docs/: grocy_governor.md  grocy_route_semantics.md  medusa_integration.md  nextcloud_integration.md  shopping_list.md  shopping_list_core.md
apps/api/grocy_manifest/: README.md
apps/api/src/: app.py  bot.py  flet_app.py  setup.py
apps/api/tests/: conftest.py  test_medusa_auth_resilience.py  test_shopping_list_updates.py  test_usage_estimation.py
apps/dashboard/: .env.development  .env.example  .env.production  OFFLINE_PWA_NOTES.md  README.md  biome.jsonc  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/dashboard/docs/: grocy_dashboard_semantics.md
apps/dashboard/public/: manifest.json  sw.js
apps/dashboard/scripts/: use-dev-env.js
apps/dashboard/src/: proxy.ts  sw.ts
docs/: DOCUMENTATION_STANDARDS.md  grocy_governor.md
grocy_manifest/: README.md
grocy_manifest/000000/: metadata.yaml
schemas/: purchase-entry-request.schema.json
scripts/: run-stack-dev.sh  run-stack-prod.sh  run-stack.sh
src/: app.py  bot.py  flet_app.py  setup.py
src/api/: __init__.py
src/api/routes/: __init__.py  grist.py
src/core/: __init__.py  config.py
src/core/cache/: recipe_cache.py  token_cache.py
src/core/grocy/: __init__.py  client.py  governor.py  manager.py  metadata.py  models.py  services.py  stock.py
src/models/: __init__.py  customer_inquiry_model.py
src/pages/calculate_ingredients/: calculation_service.py  constants.py  page.py  state_manager.py  ui_components.py
src/pages/calculate_product_costs/: chart_component.py  constants.py  cost_calculator.py  openai_client.py  page.py  state_manager.py  (+2 more)
src/services/: __init__.py
src/shared/: grist_material_transformer.py  grist_schema.py  grist_service.py  ingredient_calculator.py  models.py  tandoor_service.py  unit_converter.py
tests/: __init__.py  test_usage_estimation.py
(+269 files in other folders)
