[project]
name = "kanomnom-python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=5.5.2",
    "diskcache>=5.6.3",
    "fastapi>=0.115.8",
    "flet[all]==0.28.3",
    "inflect>=7.5.0",
    "pandas>=2.3.0",
    "phonenumbers>=8.13.55",
    "pydantic-extra-types>=2.10.2",
    "pydantic[email]>=2.10.6",
    "python-telegram-bot>=21.10",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyright>=1.1.394",
    "ruff>=0.9.7",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
